# download-tools

./: .gitignore  CMakeLists.txt  DownloadToolsV2.sln  README.md  vcpkg.json
DownloadToolsV2/: DownloadToolsV2.vcxproj  DownloadToolsV2.vcxproj.filters  LoadingPage.h  main.cpp  software_catalog.json
DownloadToolsV2/src/: Catalog.cpp  Catalog.h  Console.cpp  Console.h  Downloader.cpp  Downloader.h  FileManager.cpp  FileManager.h  Input.cpp  Input.h  Installer.cpp  Installer.h  Menu.cpp  Menu.h
